<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_project"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu_message"
            android:icon="@drawable/icon_message"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_menu_help"
            android:icon="@drawable/icon_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_menu_want_to_help"
            android:icon="@drawable/icon_want_to_help"
            android:title="@string/menu_want_to_help" />
        <item
            android:id="@+id/nav_menu_сharity_events"
            android:icon="@drawable/icon_charity_events"
            android:title="@string/menu_сharity_events" />

    </group>
</menu>
