<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="by.artemnikolaev.helpme.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="by.artemnikolaev.helpme.ui.home.HomeFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu_message"
        android:name="by.artemnikolaev.helpme.ui.message.MessageFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/nav_menu_help"
        android:name="by.artemnikolaev.helpme.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_menu_want_to_help"
        android:name="by.artemnikolaev.helpme.ui.message.WantToHelpFragment"
        android:label="@string/menu_want_to_help"
        tools:layout="@layout/fragment_want_to_help" />
    <fragment
        android:id="@+id/nav_menu_сharity_events"
        android:name="by.artemnikolaev.helpme.ui.message.CharityEventFragment"
        android:label="@string/menu_сharity_events"
        tools:layout="@layout/fragment_charity_events" />
</navigation>